[package]
name = "rusty_photo_api"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
axum = "0.6"
aws-config = "1.6.0"
aws-sdk-s3 = "1.79.0"
dotenv = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tower-http = { version = "0.1", features = ["full"] }
